@startuml VeritasDatabaseERD
!pragma layout smetana
hide circle
skinparam linetype ortho

left to right direction

' =========================
' Enterprise/Auth
' =========================
package "Enterprise & Auth" {
  entity "veritas_users" as users {
    *id : UUID <<PK>>
    --
    email : VARCHAR(255) <<UNIQUE>>
    password_hash : TEXT
    role : VARCHAR(50)
    enterprise_id : UUID <<FK, NULL>>
    is_active : BOOLEAN
    is_deleted : BOOLEAN
    email_verified : BOOLEAN
    created_at : TIMESTAMPTZ
    updated_at : TIMESTAMPTZ
  }

  entity "veritas_enterprise" as enterprise {
    *id : UUID <<PK>>
    --
    slug : VARCHAR(120) <<UNIQUE>>
    display_name : VARCHAR(255)
    legal_name : VARCHAR(255)
    contact_email : VARCHAR(255)
    owner_account_id : UUID <<FK>>
    status : enterprise_status
    subscription_plan_id : UUID <<NULL>>
    subscription_status : subscription_status <<NULL>>
    custom_domain : VARCHAR(255) <<UNIQUE, NULL>>
    settings : JSONB
    created_at : TIMESTAMPTZ
    updated_at : TIMESTAMPTZ
  }

  entity "veritas_enterprise_audit_logs" as enterprise_audit_logs {
    *id : UUID <<PK>>
    --
    enterprise_id : UUID <<FK>>
    actor_id : UUID
    actor_role : VARCHAR(50)
    event : VARCHAR(100)
    metadata : JSONB
    created_at : TIMESTAMPTZ
  }

  entity "refresh_tokens" as refresh_tokens {
    *id : UUID <<PK>>
    --
    user_id : UUID <<FK>>
    token_hash : TEXT <<UNIQUE>>
    expires_at : TIMESTAMPTZ
    revoked : BOOLEAN
    created_at : TIMESTAMPTZ
  }
}

' =========================
' Exam Service
' =========================
package "Exam Service" {
  entity "veritas_questions" as questions {
    *id : UUID <<PK>>
    --
    enterprise_id : UUID <<FK>>
    type : question_type
    topic : VARCHAR(255)
    difficulty : difficulty_level
    title : VARCHAR(500)
    content : TEXT
    points : INT
    negative_points : NUMERIC(5,2)
    metadata : JSONB
    is_active : BOOLEAN
    created_by : UUID <<FK>>
    created_at : TIMESTAMPTZ
    updated_at : TIMESTAMPTZ
  }

  entity "veritas_question_options" as question_options {
    *id : UUID <<PK>>
    --
    question_id : UUID <<FK>>
    content : TEXT
    is_correct : BOOLEAN
  }

  entity "veritas_exams" as exams {
    *id : UUID <<PK>>
    --
    enterprise_id : UUID <<FK>>
    title : VARCHAR(255)
    duration_minutes : INT
    passing_score_percent : NUMERIC(5,2)
    negative_marking : BOOLEAN
    invitation_method : VARCHAR(50)
    status : exam_status
    template_source_id : UUID <<FK, NULL>>
    settings : JSONB
    created_by : UUID <<FK>>
    created_at : TIMESTAMPTZ
    updated_at : TIMESTAMPTZ
  }

  entity "veritas_exam_questions" as exam_questions {
    *id : UUID <<PK>>
    --
    exam_id : UUID <<FK>>
    question_id : UUID <<FK>>
    points_override : INT <<NULL>>
    order_index : INT <<NULL>>
    --
    (exam_id, question_id) : UNIQUE
  }

  entity "veritas_exam_randomization_rules" as exam_randomization_rules {
    *id : UUID <<PK>>
    --
    exam_id : UUID <<FK>>
    topic : VARCHAR(255) <<NULL>>
    difficulty : difficulty_level <<NULL>>
    question_count : INT
  }
}

' =========================
' Candidate Service
' =========================
package "Candidate Service" {
  entity "candidate_profiles" as candidate_profiles {
    *id : UUID <<PK>>
    --
    enterprise_id : UUID
    external_id : VARCHAR(255)
    first_name : VARCHAR(255)
    last_name : VARCHAR(255)
    email : VARCHAR(255) <<NULL>>
    face_reference_url : TEXT <<NULL>>
    is_active : BOOLEAN
    created_at : TIMESTAMPTZ
    --
    (enterprise_id, external_id) : UNIQUE
  }

  entity "exam_enrollments" as exam_enrollments {
    *id : UUID <<PK>>
    --
    enterprise_id : UUID
    exam_id : UUID
    candidate_id : UUID <<FK>>
    invitation_method : VARCHAR(50)
    access_token_hash : TEXT
    token_expires_at : TIMESTAMPTZ
    max_attempts : INT
    attempts_used : INT
    status : VARCHAR(50)
    created_at : TIMESTAMPTZ
    --
    (exam_id, candidate_id) : UNIQUE
  }

  entity "exam_sessions" as exam_sessions {
    *id : UUID <<PK>>
    --
    enterprise_id : UUID
    exam_id : UUID
    candidate_id : UUID <<FK>>
    enrollment_id : UUID <<FK>>
    status : session_status
    started_at : TIMESTAMPTZ
    expires_at : TIMESTAMPTZ
    submitted_at : TIMESTAMPTZ <<NULL>>
    terminated_at : TIMESTAMPTZ <<NULL>>
    cheating_score : NUMERIC(5,2) <<NULL>>
    created_at : TIMESTAMPTZ
  }

  entity "session_questions" as session_questions {
    *id : UUID <<PK>>
    --
    session_id : UUID <<FK>>
    question_id : UUID
    question_snapshot : JSONB
    order_index : INT
    points : INT
    negative_points : NUMERIC(5,2)
  }

  entity "session_answers" as session_answers {
    *id : UUID <<PK>>
    --
    session_id : UUID <<FK>>
    session_question_id : UUID <<FK>>
    answer_data : JSONB
    is_final : BOOLEAN
    saved_at : TIMESTAMPTZ
    --
    (session_id, session_question_id) : UNIQUE
  }

  entity "exam_submissions" as exam_submissions {
    *id : UUID <<PK>>
    --
    session_id : UUID <<FK, UNIQUE>>
    submitted_at : TIMESTAMPTZ
    auto_submitted : BOOLEAN
    total_score : NUMERIC(6,2) <<NULL>>
    grading_status : VARCHAR(50)
    created_at : TIMESTAMPTZ
  }
}

' =========================
' Payment Service
' =========================
package "Payment Service" {
  entity "veritas_subscription_plans" as subscription_plans {
    *id : UUID <<PK>>
    --
    name : VARCHAR(100) <<UNIQUE>>
    slug : VARCHAR(100) <<UNIQUE>>
    description : TEXT <<NULL>>
    price : DECIMAL(12,2)
    currency : currency_type
    billing_cycle : billing_cycle_type
    features : JSONB
    is_active : BOOLEAN
    created_at : TIMESTAMPTZ
    updated_at : TIMESTAMPTZ
  }

  entity "veritas_enterprise_subscriptions" as enterprise_subscriptions {
    *id : UUID <<PK>>
    --
    enterprise_id : UUID <<UNIQUE>>
    plan_id : UUID <<FK>>
    status : sub_status_type
    current_period_start : TIMESTAMPTZ
    current_period_end : TIMESTAMPTZ
    cancel_at_period_end : BOOLEAN
    canceled_at : TIMESTAMPTZ <<NULL>>
    ended_at : TIMESTAMPTZ <<NULL>>
    stripe_customer_id : VARCHAR(255) <<NULL>>
    stripe_subscription_id : VARCHAR(255) <<NULL>>
    created_at : TIMESTAMPTZ
    updated_at : TIMESTAMPTZ
  }

  entity "veritas_invoices" as invoices {
    *id : UUID <<PK>>
    --
    enterprise_id : UUID <<FK>>
    subscription_id : UUID <<FK>>
    number : VARCHAR(50) <<UNIQUE>>
    status : invoice_status_type
    amount_due : DECIMAL(12,2)
    amount_paid : DECIMAL(12,2)
    amount_remaining : DECIMAL(12,2)
    currency : currency_type
    due_date : TIMESTAMPTZ
    paid_at : TIMESTAMPTZ <<NULL>>
    created_at : TIMESTAMPTZ
    updated_at : TIMESTAMPTZ
  }

  entity "veritas_payments" as payments {
    *id : UUID <<PK>>
    --
    enterprise_id : UUID <<FK>>
    invoice_id : UUID <<FK, NULL>>
    amount : DECIMAL(12,2)
    currency : currency_type
    status : payment_status_type
    payment_method_type : VARCHAR(50) <<NULL>>
    provider : VARCHAR(50)
    provider_payment_id : VARCHAR(255) <<UNIQUE>>
    provider_error_code : VARCHAR(100) <<NULL>>
    provider_error_message : TEXT <<NULL>>
    created_at : TIMESTAMPTZ
  }
}

' =========================
' Enforced relationships
' =========================
users ||--o{ refresh_tokens : user_id
users ||--o{ enterprise : owner_account_id
enterprise ||--o{ enterprise_audit_logs : enterprise_id

enterprise ||--o{ questions : enterprise_id
users ||--o{ questions : created_by
enterprise ||--o{ exams : enterprise_id
users ||--o{ exams : created_by
questions ||--o{ question_options : question_id
exams ||--o{ exam_questions : exam_id
questions ||--o{ exam_questions : question_id
exams ||--o{ exam_randomization_rules : exam_id
exams ||--o{ exams : template_source_id

candidate_profiles ||--o{ exam_enrollments : candidate_id
candidate_profiles ||--o{ exam_sessions : candidate_id
exam_enrollments ||--o{ exam_sessions : enrollment_id
exam_sessions ||--o{ session_questions : session_id
exam_sessions ||--o{ session_answers : session_id
session_questions ||--o{ session_answers : session_question_id
exam_sessions ||--o| exam_submissions : session_id

subscription_plans ||--o{ enterprise_subscriptions : plan_id
enterprise_subscriptions ||--o{ invoices : subscription_id
enterprise_subscriptions ||--o{ invoices : enterprise_id
enterprise_subscriptions ||--o{ payments : enterprise_id
invoices ||--o{ payments : invoice_id

' =========================
' Soft / cross-service references
' =========================
enterprise_subscriptions .. enterprise : enterprise_id (soft ref)
exam_enrollments .. exams : exam_id (soft ref)
exam_sessions .. exams : exam_id (soft ref)
candidate_profiles .. enterprise : enterprise_id (soft ref)

note right of users
  role values:
  - SystemAdmin
  - EnterpriseAdmin
  - EnterpriseAuto
  - EnterpriseStaff
  - ExamCandidate
end note

note bottom of enterprise
  enterprise_status: PendingApproval, Active, Suspended, Deleted
  subscription_status: Trial, Active, PastDue, Canceled, Expired
end note

note bottom of questions
  question_type: MCQ, TrueFalse, ShortAnswer, Essay
  difficulty_level: Easy, Medium, Hard
end note

note bottom of exams
  exam_status: Draft, Scheduled, Active, Closed, Archived
  invitation_method: Email, Link, Token
end note

note bottom of exam_sessions
  session_status: Active, Submitted, Terminated, Expired
end note

note bottom of subscription_plans
  billing_cycle_type: monthly, yearly
  currency_type: ETB, USD, EUR, GBP
end note

note bottom of enterprise_subscriptions
  sub_status_type: Active, PastDue, Canceled, Expired, Trial
end note

note bottom of invoices
  invoice_status_type: Draft, Open, Paid, Void, Uncollectible
end note

note bottom of payments
  payment_status_type: Pending, Succeeded, Failed, Refunded
end note

@enduml
